2011-03-17  Paul Eggert  <eggert@cs.ucla.edu>

	* deps.mk (unexalpha.o): Remove; unused.

2011-03-16  Paul Eggert  <eggert@cs.ucla.edu>

	New file unexec.h, the (simple) interface for unexec (Bug#8267).
	* unexec.h: New file.
	* deps.mk (emacs.o, unexaix.o, unexcw.o, unexcoff.o, unexelf.o):
	(unexhp9k800.o, unexmacosx.o, unexsol.o, unexw32.o):
	Depend on unexec.h.
	* emacs.c [!defined CANNOT_DUMP]: Include unexec.h.
	* unexaix.c, unexcoff.c, unexcw.c, unexelf.c, unexhp9k800.c:
	* unexmacosx.c, unexsol.c, unexw32.c: Include unexec.h.

	* syntax.c (Fforward_comment, scan_lists): Rename locals to avoid
	shadowing.
	(back_comment, skip_chars): Mark vars as initialized.

	* character.h (FETCH_STRING_CHAR_ADVANCE_NO_CHECK, BUF_INC_POS):
	Rename locals to avoid shadowing.

	* lread.c (read1): Rewrite so as not to use empty "else".
	(Fload, readevalloop, read1): Rename locals to avoid shadowing.

	* print.c (Fredirect_debugging_output): Fix pointer signedess.

	* lisp.h (debug_output_compilation_hack): Add decl here, to avoid
	warning when compiling print.c.

	* font.c (font_unparse_fcname): Abort in an "impossible" situation
	instead of using an uninitialized var.
	(font_sort_entities): Mark var as initialized.

	* character.h (FETCH_CHAR_ADVANCE): Rename locals to avoid shadowing.

	* font.c (font_unparse_xlfd): Don't mix pointers to variables with
	pointers to constants.
	(font_parse_fcname): Remove unused vars.
	(font_delete_unmatched): Now static.
	(font_get_spec): Remove; unused.
	(font_style_to_value, font_prop_validate_style, font_unparse_fcname):
	(font_update_drivers, Ffont_get_glyphs, font_add_log):
	Rename or move locals to avoid shadowing.

	* fns.c (require_nesting_list, require_unwind): Now static.
	(Ffillarray): Rename locals to avoid shadowing.

	* floatfns.c (domain_error2): Define only if needed.
	(Ffrexp, Fldexp): Rename locals to avoid shadowing.

	* alloc.c (mark_backtrace): Move decl from here ...
	* lisp.h: ... to here, so that it can be checked.
